# tre-file-manager

./: .gitignore  CLAUDE.md  Cargo.toml  README.ko.md  README.md  new_spec.md
.claude/agents/: trefm-architect.md  trefm-doc-updator.md  trefm-impl-core.md  trefm-impl-tui.md  trefm-validator.md
claude_history/: 2026-02-10-security-audit.md  2026-02-10-vscode-sidebar-redesign.md  2026-02-13-filetree-nvim-open.md  2026-02-14-server-side-logout.md  2026-02-15-docs-sync.md  2026-02-15-file-transfer.md
config/: default.toml  keymap.toml  theme.toml  trefm-web.example.toml
crates/trefm-core/: Cargo.toml
crates/trefm-core/src/: action.rs  error.rs  event.rs  lib.rs
crates/trefm-core/src/config/: keymap.rs  mod.rs  settings.rs  theme.rs
crates/trefm-core/src/fs/: duplicates.rs  entry.rs  mod.rs  ops.rs  preview.rs
crates/trefm-core/src/git/: branch.rs  mod.rs  status.rs
crates/trefm-core/src/nav/: bookmarks.rs  filter.rs  history.rs  mod.rs  panel.rs
crates/trefm-core/src/remote/: mod.rs  sftp.rs
crates/trefm-tui/: Cargo.toml
crates/trefm-tui/src/: app.rs  background.rs  icons.rs  image_preview.rs  input.rs  main.rs  render.rs  watcher.rs
crates/trefm-tui/src/terminal_emu/: mod.rs  pty.rs  screen.rs  widget.rs
crates/trefm-tui/src/ui/: breadcrumb.rs  command_palette.rs  markdown.rs  mod.rs  panel.rs  popup.rs  preview.rs  remote_connect.rs  statusbar.rs  tab_bar.rs
crates/trefm-web/: Cargo.toml
crates/trefm-web/src/: config.rs  dto.rs  error.rs  main.rs  state.rs  static_files.rs
crates/trefm-web/src/api/: auth_handlers.rs  files.rs  mod.rs
crates/trefm-web/src/auth/: discord_otp.rs  jwt.rs  middleware.rs  mod.rs  password.rs  session.rs  webauthn_manager.rs
crates/trefm-web/src/middleware/: bot_guard.rs  mod.rs  rate_limit.rs  security_headers.rs
crates/trefm-web/src/ws/: mod.rs  terminal.rs
crates/trefm-web/web/: index.html  package-lock.json  package.json  vite.config.ts
crates/trefm-web/web/src/: App.tsx  index.tsx
crates/trefm-web/web/src/components/: ContextMenu.tsx  FileTree.tsx  LoginPage.tsx  PasskeySetup.tsx  Terminal.tsx  Toast.tsx
crates/trefm-web/web/src/hooks/: useAuth.ts  useFileTree.ts  useTerminal.ts
crates/trefm-web/web/src/lib/: api.ts  icons.ts  types.ts
crates/trefm-web/web/src/styles/: global.css
docs/: architecture.md  core-api.md  tui-internals.md
scripts/: restart-web.sh  start-remote.sh  trefm-web.sh
