[workspace]
members = ["crates/trefm-core", "crates/trefm-tui", "crates/trefm-web"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

# Patch zune-jpeg to fix unsafe neon intrinsics on aarch64 + Rust 1.86+.
# See: https://github.com/etemesi254/zune-image/issues/265
[patch.crates-io]
zune-jpeg = { path = "vendor/zune-jpeg" }
