[package]
name = "trefm-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
argon2 = "0.5"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
anyhow = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
portable-pty = "0.8"
base64 = "0.22"
futures = "0.3"

# TLS
axum-server = { version = "0.7", features = ["tls-rustls"] }

# WebAuthn
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
url = "2"

# Rate Limit
tower_governor = "0.8"

# Discord OTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Session Store
dashmap = "6"

# Streaming
tokio-util = { version = "0.7", features = ["io"] }
